# Physics-Engine

./: CMakeLists.txt  README.md  Transform.h  UML.mdj  project.mdj  run.sh
Physics_Engine/: CMakeLists.txt  main.cpp
Physics_Engine/include/: vectorMath.h
include/: AbstractManager.h  CameraComponent.h  CleanManager.h  Collider.h  CollisionManager.h  Component.h  PhysComponent.h  RigidBody.h  Scene.h  SpriteComponent.h  Transform.h  vectorMath.h
miptlance/: README.md  pubspec.yaml
miptlance/android/app/: build.gradle  google-services.json
miptlance/ios/Runner/: Info.plist
miptlance/ios/Runner.xcodeproj/: project.pbxproj
miptlance/lib/: main.dart  subjectsEnum.dart  wrapper.dart
miptlance/lib/orderClasses/: offer.dart
miptlance/lib/pages/: MyOffersPage.dart  homePage.dart  homeUI.dart  offersPage.dart  personalPage.dart  settings.dart  signInPage.dart  signUpPage.dart
miptlance/lib/services/: auth.dart  dataBase.dart  offerDataBase.dart  userDataBase.dart
miptlance/lib/userClasses/: Customer.dart  Freelancer.dart  UserData.dart  UserIdentifier.dart
miptlance/linux/: CMakeLists.txt  my_application.cc
miptlance/test/: widget_test.dart
miptlance/windows/: CMakeLists.txt
miptlance/windows/runner/: Runner.rc  main.cpp
src/: AbstractManager.cpp  BubbleComponent.cpp  BubbleComponent.h  CMakeLists.txt  CameraComponent.cpp  CleanManager.cpp  Component.cpp  FindSFML.cmake  GameObject.cpp  PhysComponent.cpp  RigidBody.cpp  SpriteComponent.cpp  Transform.cpp  main.cpp
src/Engine/: CMakeLists.txt
src/Engine/include/: AbstractManager.h  CleanManager.h  (+11 more)
(+13 files in other folders)
